# QTSynth

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Harp.json  Harp_dummy.json  PianoKeyboard.hpp  QTSynth.code-workspace  TracyTargets.cmake  dump.json  key2note.hpp  main.cpp  main.hpp  patch.cpp  patch.hpp  sample_compute.cpp  sample_compute.hpp  threads.cpp  threads.hpp  tuning.hpp  valgrind.sh  vcpkg.json
